--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html(lang="en")
             a.fb_button_medium(href='/auth/facebook')
               span#fb_login_text.fb_button_text Login
       h1
-        a(href='/', class='alert-message') Howler 
+        a(href='/', class='alert-message') NodeBin 
           small beta
 
       a(href='/about/this', class='alert-message error') about
